--- a/.github/workflows/dry-build.yml
+++ b/.github/workflows/dry-build.yml
@@ -1,4 +1,4 @@
-name: Dry Build
+name: Build for iOS Mach-O 64
 
 on:
   pull_request:
@@ -6,56 +6,23 @@ on:
       - main
 
 jobs:
-  build_windows:
-    name: Build for Windows
+  build_ios_macho64:
+    name: Build for Mach-O 64 (iOS 13.0+)
     runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
-        arch: [ arm64, amd64 ]
+        arch: [ arm64 ] # Targeting arm64 for modern iOS 64-bit
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.19.3'
+          go-version: '1.19.3' # Or your desired Go version
           cache: true
-      - run: go build -o ipatool-$GOOS-$GOARCH.exe
+      - run: go build -o ipatool-ios-macho64-$GOARCH
         env:
-          GOOS: windows
+          GOOS: ios
           GOARCH: ${{ matrix.arch }}
-  build_linux:
-    name: Build for Linux
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [ arm64, amd64 ]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.19.3'
-          cache: true
-      - run: go build -o ipatool-$GOOS-$GOARCH
-        env:
-          GOOS: linux
-          GOARCH: ${{ matrix.arch }}
-  build_macos:
-    name: Build for macOS
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [ arm64, amd64 ]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.19.3'
-          cache: true
-      - run: go build -o ipatool-$GOOS-$GOARCH
-        env:
-          GOOS: darwin
-          GOARCH: ${{ matrix.arch }}
-          CGO_CFLAGS: -mmacosx-version-min=10.15
-          CGO_LDFLAGS: -mmacosx-version-min=10.15
+          CGO_ENABLED: 1 # Explicitly enable CGO if needed for iOS (often required)
+          CGO_CFLAGS: -mios-version-min=13.0 # Set minimum iOS version to 13.0
+          CGO_LDFLAGS: -mios-version-min=13.0 # Set minimum iOS version for linker
